--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 </h2>
 
 <h3>Example Usage:</h3>
-<p>https://timestamp-ms.herokuapp.com/December%2015,%202015</p>
-<p>https://timestamp-ms.herokuapp.com/1450137600</p>
+<p>https://fcc-urlshortener-fylin134.com/www.google.com</p>
 
 <h3>Example output:</h3>
-<p>{ "unix": 1450137600, "natural": "December 15, 2015" }</p>
+<p>{ "original url": www.google.com, "short url": "https://fcc-urlshortener-fylin134.com/26" }</p>
