--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </h2>
 
 <h3>Example Usage:</h3>
-<p>https://fcc-urlshortener-fylin134.com/www.google.com</p>
+<p>https://fcc-urlshortener-fylin134.herokuapp.com/www.google.com</p>
 
 <h3>Example output:</h3>
-<p>{ "original url": www.google.com, "short url": "https://fcc-urlshortener-fylin134.com/26" }</p>
+<p>{ "original url": www.google.com, "short url": "https://fcc-urlshortener-fylin134.herokuapp.com/26" }</p>
